# auth-simple-for-streamlit

./: .env.sample  .gitignore  LICENSE  MANIFEST.in  README.md  admin.py  app.py  env.py  env.sample  pyproject.toml  requirements.txt  run.cmd  setup.cfg  setup.py  streamlit_debug.py
.claude/: settings.local.json
.streamlit/: config.toml
_pm/: ARCHITECTURE.md  COOKIE_MANAGER_REFACTOR.md  IMPORT_SHIM.md  PACKAGE_SETUP.md  SERVER_SIDE_SESSIONS.md  SETUP_COMPLETE.md
authlib/: __init__.py  auth.py  auth_session.py  auth_signup.py
authlib/common/: __init__.py  const.py  cookie_component.py  cookie_manager.py  crypto.py  dt_helpers.py  email_service.py  session_token_component.py  session_token_manager.py
authlib/repo/: __init__.py  repo.py  repo_NOTUSED.py  storage_factory.py
authlib/repo/provider/: base_provider.py
authlib/repo/provider/airtable/: __init__.py  implementation.py  settings.py
authlib/repo/provider/sqlite/: implementation.py  settings.py
db/: auth.db  auth_master.db
st_auth_simple/: __init__.py
streamlit/auth-simple-for-streamlit/: .gitignore  Readme.md  app.py  env.py  requirements.txt  streamlit_debug.py
streamlit/auth-simple-for-streamlit/authlib/: __init__.py  auth.py
streamlit/auth-simple-for-streamlit/authlib/common/: const.py
streamlit/auth-simple-for-streamlit/authlib/repo/: __init__.py
streamlit/auth-simple-for-streamlit/authlib/repo/provider/airtable/: implementation.py
streamlit/auth-simple-for-streamlit/authlib/repo/provider/sqlite/: __init__.py  implementation.py  settings.py
